--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,24 @@
     </div>
     <div class="col-lg-9 col-xl-8 text-center">
       <p class="lead">{{ .Params.lead | safeHTML }}</p>
-      <a class="btn btn-primary btn-lg px-4 mb-2" href="/simple-risk/docs/{{ if .Site.Params.options.docsVersioning }}{{ .Site.Params.docsVersion }}/{{ end }}/intro/purpose" role="button">Get Started</a>
+    
+    </div>
+  </div>
+</section>
+
+<section class="section section-sm">
+  <div class="container">
+    <div class="row justify-content-center text-center">
+      <div class="col-lg-5">
+        <h2 class="h4">Documentation</h2>
+        <p>Learn terminology, methods, and strategies involved with risk measurement.</p><a class="btn btn-primary btn-lg px-4 mb-2" href="/simple-risk/docs/{{ if .Site.Params.options.docsVersioning }}{{ .Site.Params.docsVersion }}/{{ end }}/intro/purpose" role="button">Docs</a>
+      </div>
+      <div class="col-lg-5">
+        <h2 class="h4">Blog</h2>
+        <p>Keep posted on measurements done for in-the-wild security issues.</p>
+        <a class="btn btn-primary btn-lg px-4 mb-2" href="/simple-risk/blog" role="button">Blog</a>
+      </div>
+      
     </div>
   </div>
 </section>
@@ -23,3 +40,5 @@
   </div>
 </section>
 {{ end }}
+
+
